# murmur

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  murmur.example.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
npm/: install.js  package.json  run.js
src/: layout.rs  main.rs  update.rs
src/app/: mod.rs
src/key/: mod.rs
src/session/: history.rs  input.rs  mod.rs  pin.rs  proc_name.rs  prompt.rs  selection.rs
src/ui/: ansi.rs  bar.rs  mod.rs  overview.rs  term_render.rs  tile.rs
