[package]
name = "murmur"
version = "0.1.0"
edition = "2021"
description = "Terminal command center for AI coding sessions"
license = "MIT"
repository = "https://github.com/user/murmur"
keywords = ["tui", "terminal", "ai", "claude", "kanban"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["bracketed-paste"] }
portable-pty = "0.8"
anyhow = "1"
shellexpand = "3"
vt100 = "0.16"

[profile.release]
lto = true
strip = true
codegen-units = 1
